# atlas-assistant-v2

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  start-desktop.ps1
.github/instructions/: atlas-instructions.instructions.md
backend/: requirements.txt
backend/src/: __init__.py  data_service.py  database.py  hardware_database.py  hardware_service.py  main.py  settings.py  system_utils.py  voice.py  websocket_server.py
backend/src/backend/data/: atlas.db  hardware_parts.db
backend/src/modules/: __init__.py  hardware.py  module_template.py  notes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: .placeholder  README.md  generate-icons.ps1
frontend/src-tauri/src/: main.rs
frontend/src/modules/: CircuitDesigner.jsx  HardwareModule.jsx  ModuleTemplate.jsx  NoteModule.jsx  SettingsModule.jsx  SystemModule.jsx
frontend/src/styles/: global.css
