[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-assistant"
version = "0.1.0"
description = "JARVIS-style desktop assistant"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "websockets>=13.0",
    "pydantic>=2.6.0",
    "sounddevice>=0.4.7",
    "librosa>=0.10.1",
    "psutil>=6.0.0",
]

[tool.pylance]
pythonVersion = "3.12"
typeCheckingMode = "off"
venvPath = "${workspaceFolder}/backend"
venv = "venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ["py312"]
